# mallory-mcp-server

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  server.py  smithery.yaml
.github/workflows/: release.yml
malloryai/mcp/: app.py
malloryai/mcp/app/: app.py
malloryai/mcp/config/: initialize_logger.py  settings.py
malloryai/mcp/decorator/: api.py
malloryai/mcp/server/: server.py
malloryai/mcp/tools/: exploitations.py  threat_actors.py  vulnerabilities.py
scripts/: .pre-commit-config.yaml  install-commit-hook.sh
