[project]
name = "malloryai-mcp-server"
version = "0.1.0"
description = "MalloryAI Intelligence MCP Server"
authors = [
    { name = "Mallory Team", email = "hello@mallory.ai" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "malloryai-sdk>=0.3.0",
    "mcp[cli]==1.2.0rc1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.6",
]

[project.urls]
Homepage = "https://github.com/malloryai/mallory-mcp-server"
Documentation = "https://github.com/malloryai/mallory-mcp-server#readme"
Repository = "https://github.com/malloryai/mallory-mcp-server.git"
Issues = "https://github.com/malloryai/mallory-mcp-server/issues"

[project.optional-dependencies]
lint = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]
tools = [
    "bandit>=1.8.2",
    "pre-commit>=4.1.0",
]

[project.scripts]
malloryai-mcp-server = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["malloryai"]
include = ["app.py"]
exclude = [
    "tests*",
    "docs*",
]

[tool.hatch.build.targets.wheel]
packages = ["malloryai"]
include = ["app.py"]

[tool.setuptools]
packages = ["malloryai"]
include = ["app.py"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
